--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.onalant.routine.MainActivity$PlaceholderFragment">
+    tools:context="com.onalant.routine.MainActivity.StartFragment">
 
     <TextView
         android:text="@string/button_start"
@@ -18,6 +18,12 @@
         android:id="@+id/start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"/>
+    
+    <ListView
+        android:id="@+id/routine_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"></ListView>
 
 </RelativeLayout>
